# KaikOut

./: README.md  pyproject.toml
kaikout/: __main__.py  config.py  database.py  utilities.py  version.py
kaikout/assets/: about.toml  accounts.toml  commands.toml  rtbl.toml  settings.toml
kaikout/xmpp/: chat.py  client.py  commands.py  groupchat.py  message.py  moderation.py  muc.py  observation.py  presence.py  pubsub.py  status.py  utilities.py
